<resources>
    <string name="app_name">Janbahon Rider</string>
    <string name="continue_text">Continue</string>
    <string name="register_text">Let\'s start with creating your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_exit">Sign out</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="permission_require">Permission Location required</string>
    <string name="drivers_not_found">Drivers not found</string>
    <string name="key_not_found">Key driver not found</string>
    <string name="welcome">Good afternoon</string>
    <string name="choose_a_saved_place">Choose a saved place</string>
    <string name="city_name_not_found">City name not found</string>
    <string name="title_activity_request_driver">RequestDriverActivity</string>
    <string name="_12340_sn_fdfdfdfdfdfdfdfdfdfddfdfdfdggfgfgfgfgfgfgfgfg">12340 sN fdfdfdfdfdfdfdfdfdfddfdfdfdggfgfgfgfgfgfgfgfg</string>
    <string name="pay_by_cash">Pay by Cash</string>
    <string name="confirm_uber">Confirm Uber</string>
    <string name="confirm_pickup_spot">Confirm Pickup Spot</string>
    <string name="address_demo">25/4 Zigatola,dhaka</string>
    <string name="confirm_pickup">Confirm Pickup</string>
    <string name="meet_driver_here">Meet Driver here</string>
    <string name="finding_your_rides">Finding your ride</string>
    <string name="token_not_found">Token not found</string>
    <string name="send_request_driver_failed">Request driver failed</string>
    <string name="no_driver_accept">No driver accepted your request</string>
    <string name="trip_not_found">Trip not found with this id</string>
    <string name="uber_x">C Name</string>
    <string name="car_number_example">C number</string>
    <string name="driver_name_example">Wasi</string>
    <string name="ascii_dot">■</string>
    <string name="language_example">Knows english</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="fee">Fee</string>
    <string name="trip_details">Trip Details</string>
    <string name="demo_address">144 New Baily Road</string>
    <string name="base_fare">Base Fare</string>
    <string name="bus_route">Bus Route</string>
    <string name="confirm">Confirm</string>

</resources>