<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id = "@+id/driver_info_layout_bike"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingTop="8dp"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="8dp">


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/bike_display"
                    android:layout_marginLeft="50dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_driver"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_baseline_account_circle_24"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_car_type_bike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/uber_move"
                    android:text="@string/uber_x"
                    android:textColor="#737373"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_driver_id1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/uber_move"
                    android:text="ID"
                    android:textColor="#737373"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_rider_id1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/uber_move"
                    android:text="ID"
                    android:textColor="#737373"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_car_number_bike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/uber_move"
                    android:text="@string/car_number_example"
                    android:textColor="#737373"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingTop="8dp"
                android:paddingRight="@dimen/activity_margin"
                android:paddingBottom="8dp">


                <TextView
                    android:id="@+id/txt_driver_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/driver_name_example"
                    android:fontFamily="@font/uber_move"
                    android:textColor="#737373"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/txt_driver_number1"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/driver_name_example"
                    android:fontFamily="@font/uber_move"
                    android:textColor="#737373"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/ascii_dot"
                    android:textColor="#737373"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/txt_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="5.00"
                    android:drawableRight="@drawable/ic_baseline_star_24"
                    android:fontFamily="@font/uber_move_bold"
                    android:textColor="#737373"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/ascii_dot"
                    android:textColor="#737373"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/txt_foreign_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/language_example"
                    android:fontFamily="@font/uber_move"
                    android:textColor="#737373"
                    android:textSize="14sp"/>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingTop="8dp"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="8dp"
            android:weightSum="12">

            <Button
                android:id="@+id/call_driver1"
                android:text="Call"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/btn_chat1"

                android:text="Any pickup message"
                android:inputType="textMultiLine"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/call_driver"/>
            <Button
                android:id="@+id/btn_emergency1"

                android:text="Energency"

                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/btn_chat1"/>

        </LinearLayout>



    </LinearLayout>



</androidx.cardview.widget.CardView>